# Anisotropic-Soft-Tissue-Remodeling

./: ._README.md  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  release_manifest.json  requirements.txt
data/: ._README.md  README.md
docs/: ._mathematical_model.md  api_overview.md  equilibrium_remodeling_coupling.md  finite_element_equilibrium.md  mathematical_model.md  multiple_fiber_architecture.md  parameter_identification.md  polarimetry_initialized_remodeling.md  polarimetry_pipeline.md  release_notes_v1.0.md  reproducibility.md  synthetic_data_policy.md  synthetic_validation_challenge.md  verification.md
examples/: equilibrium_remodeling_coupling.py  finite_element_equilibrium.py  multiple_fiber_families_and_regularization.py  parameter_identification_and_sensitivity.py  polarimetry_initialized_remodeling.py  polarimetry_to_structure.py  synthetic_validation_challenge.py  uniaxial_remodeling.py
notebooks/: 01_homogeneous_remodeling.ipynb  02_spatial_fiber_field.ipynb  03_polarimetry_to_structure.ipynb  04_polarimetry_initialized_remodeling.ipynb  05_finite_element_equilibrium.ipynb  06_equilibrium_remodeling_coupling.ipynb  07_multiple_fiber_families_and_regularization.ipynb  08_parameter_identification_and_sensitivity.ipynb  09_synthetic_validation_challenge.ipynb  10_release_reproducibility_audit.ipynb
scripts/: build_release_manifest.py
tests/: test_architecture.py  test_coupling.py  test_equilibrium_remodeling.py  test_finite_element.py  test_identification.py  test_material.py  test_multifiber_finite_element.py  test_orientation.py  test_polarimetry.py  test_release.py  test_remodeling.py  test_simulation.py  test_spatial.py  test_stimuli.py  test_synthetic.py  (+1 more)
(+53 files in other folders)
